<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veggie411</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_scan"></string>
    <string name="main_products"></string>
    <string name="main_ingredients"></string>
    <string name="main_more"></string>
    
    <string name="add_product_instructions"></string>
    <string name="add_product_brand">Brand</string>
    <string name="add_product_brand_input"></string>
    <string name="add_product_name">Name</string>
    <string name="add_product_name_input"></string>
    <string name="add_product_packaging">Packaging</string>
    <string name="add_product_size">Size</string>
    <string name="add_product_size_input">0</string>
    <string name="add_product_ingredients">Ingredients</string>
    <string name="add_product_ingredients_feedback">Add one by one</string>
    <string name="add_product_ingredients_input"></string>
    <string name="add_product_upload_image">Upload Image</string>
    <string name="add_product_save">Save</string>
    <string name="add_product_cancel">Cancel</string>
    
    <string name="view_product_barcode"></string>
    <string name="view_product_name"></string>
    <string name="view_product_brand"></string>
    <string name="view_product_done"></string>
    
    <string name="list_ingredients_header">Ingredients:</string>
    <string name="list_item_ingredient_name">asdf</string>
    
    <string name="expandable_child"></string>
    <string name="expandable_group"></string>
    
   	<string name="profile_name">VeggieFest</string>
   	<string name="profile_age_location">Chicago</string>
    <string name="profile_points"></string>
    <string name="profile_vege_status"></string>
    
    <string name="edit_profile_bad_ingredients">Gluten</string>
    <string name="edit_profile_good_ingredients"></string>
    <string name="edit_profile_vegetarian">Vegetarian</string>
    <string name="edit_profile_pescatarian">Pescatarian</string>
    <string name="edit_profile_lacto_ovo">Lacto-ovo</string>
    <string name="edit_profile_vegan">Vegan</string>
    <string name="edit_profile_none">None</string>
    <string name="edit_profile_can_eat">Can Eat</string>
    <string name="edit_profile_cant_eat">Can\'t Eat</string>
    <string name="edit_profile_special_ingredients">Special Ingredients</string>
    <string name="edit_profile_city">San Francisco</string>

</resources>