<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:paddingRight="2dp"
            android:src="@drawable/default_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:orientation="vertical" >
            
                        <TextView
                            android:id="@+id/profile_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:gravity="bottom|center_horizontal"
                            android:text="@string/profile_name"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/profile_age_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile_age_location"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/profile_points"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile_points"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/profile_status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:src="@drawable/success_small" />

        <TextView
            android:id="@+id/profile_status"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/profile_vege_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@+id/profile_additional_ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="200dp" >
    </ListView>

    <ImageButton
        android:id="@+id/profile_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:src="@drawable/more" />

</LinearLayout>