<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/view_product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/view_product_brand"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
                <TextView
                android:id="@+id/view_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/view_product_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <ImageView
            android:id="@+id/view_product_result_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:src="@drawable/success" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/view_product_barcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/view_product_barcode"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/nutritionix_poweredby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:src="@drawable/nutritionix_poweredby" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        android:paddingTop="1dp" >

        <ListView
            android:id="@+id/view_product_ingredients_list"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:background="#FFFFFF"
            android:focusable="false" >
        </ListView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/view_product_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/done"
        android:text="view_product_done" />

</LinearLayout>